<resources>
    <string name="app_name">只买对的</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="main_tab_me">我的</string>
    <string name="main_tab_strategy">攻略</string>
    <string name="main_tab_goods">好货</string>
    <string name="main_tab_tea">下午茶</string>
    <string name="strategy_tab_1">每日更新</string>
    <string name="strategy_tab_2">礼物</string>
    <string name="strategy_tab_3">吃货</string>
    <string name="strategy_tab_4">生活家</string>
    <string name="strategy_tab_5">爱美</string>
    <string name="strategy_tab_6">穿搭</string>
    <string name="strategy_tab_7"></string>
    <string name="strategy_tab_8"></string>
    <string name="strategy_tab_9"></string>

    <!--title-->
    <string name="title_feedback">产品反馈</string>
    <string name="title_resetpassword">重置密码</string>


    <string name="fragment_me_setting">设置</string>
    <string name="fragment_sku_tab_new">最新</string>
    <string name="fragment_sku_tab_moods">人气</string>

    <!--我的界面-->
    <string name="me_like_sku">喜欢的单品</string>
    <string name="me_like_strategy">喜欢的攻略</string>

    <!--Second-->
    <string name="second_base_title">标题，需要修改</string>
    <string name="actionbar_send">提交</string>
    <string name="text_alidate_phonenum">验证手机号</string>
    <string name="button_alidate">验证</string>
    <string name="button_next">下一步</string>
    <string name="text_qq_wx">使用社交软件登陆</string>
    <string name="button_login">登陆</string>
    <string name="text_login_title">使用账号登陆只买对的</string>
    <string name="text_lose_password">忘记密码？</string>

    <!--hint 提示-->
    <string name="feedback_content_hint">请在这里写下你的产品感受，帮助我们不断完善产品，感谢！</string>
    <string name="feedback_contact_hint">手机号，微信号，QQ，邮箱</string>
    <string name="feedback_contact">联系方式</string>
    <string name="hint_input_phononum">请输入您的手机号</string>
    <string name="hint_alidateCode">6位验证码</string>
    <string name="title_login">账号登陆</string>
    <string name="hint_loginpassword">登陆密码</string>
    <string name="text_alidate_phonenum_login">验证手机号登陆只买对的</string>
    <string name="text_agree_agreement">点击登陆，即表示您同意《只买对的用户协议》</string>
    <string name="text_account_login">使用账号登陆</string>
    <string name="text_set_passeord">为了您的资料安全建议设置密码</string>
    <string name="title_set_password">设置密码</string>
    <string name="hint_input_password">输入密码</string>
    <string name="hint_inputpassword_again">再次输入密码</string>
    <string name="button_ensure">确定</string>
    <string name="title_setphonenumber">设置手机号</string>
    <string name="text_global_goods_everyday_change">全球好货天天更新</string>

    <string name="hint_search_input">输入搜索内容</string>
    <string name="text_strategy">攻略</string>
    <string name="text_good_goods">好货</string>
    <string name="title_setting">设置</string>
    <string name="txt_account_information">账号资料</string>
    <string name="txt_account_safety">账号安全</string>
    <string name="txt_phononum">手机号</string>
    <string name="txt_password">密码</string>
    <string name="txt_weibo">微博</string>
    <string name="txt_weixin">微信</string>
    <string name="txt_qq">QQ</string>
    <string name="txt_feedback">产品反馈</string>
    <string name="txt_exit">退出登录</string>
    <string name="txt_agreement">用户协议</string>
    <string name="txt_cleanup">清理缓存</string>
    <string name="text_cancel">取消</string>
    <string name="txt_more">更多</string>


    <string name="toast_network_notavailable">网络连接不可用，请稍后再试</string>
    <string name="toast_network_outtime">网络连接超时，请检查网络设置</string>
</resources>
