<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:text="@string/text_login_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/hint_input_phononum"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/hint_loginpassword"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_lose_password"
        android:layout_gravity="right" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_247_37_88"
        android:textColor="@color/white"
        android:text="@string/button_login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="10dp">
        <View
            style="@style/row_style_margin"
            android:layout_toLeftOf="@+id/www"
            android:layout_centerVertical="true">
        </View>
        <TextView
            android:id="@+id/www"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_qq_wx"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_centerInParent="true"/>
        <View
            style="@style/row_style_margin"
            android:layout_toRightOf="@+id/www"
            android:layout_centerVertical="true">
        </View>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <ImageButton
            android:id="@+id/button_loginwb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@null"
            android:src="@drawable/ic_loginwb"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_loginqq"
            android:layout_marginLeft="30dp"
            android:background="@null"
            android:layout_toRightOf="@+id/button_loginwb"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_loginwb"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:src="@drawable/ic_loginwx"/>
    </RelativeLayout>

</LinearLayout>