<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp">
       <Button
           android:id="@+id/button_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentRight="true"
           android:layout_centerVertical="true"
           android:background="@null"
           android:paddingLeft="-5dp"
           android:text="@string/text_cancel"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/button_cancel"
            android:background="@drawable/edit_share"
            android:layout_centerVertical="true"
            android:textSize="12sp"
            android:hint="@string/hint_search_input" />
    </RelativeLayout>
    <View
        style="@style/row_style_margin"
        android:visibility="visible"/>
    <LinearLayout
        android:id="@+id/layout_choice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        >
        <RelativeLayout
            android:id="@+id/search_left_rel"
            style="@style/me_tab_rel_style">
            <TextView
                android:id="@+id/tab_txt_left"
                style="@style/me_tab_text_style"
                android:textColor="@color/sku_line"
                android:text="@string/text_strategy"
                />
            <View
                android:id="@+id/line_lift"
                style="@style/me_tab_line_style"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_right_rel"
            style="@style/me_tab_rel_style">
            <TextView
                android:id="@+id/tab_txt_right"
                style="@style/me_tab_text_style"
                android:text="@string/text_good_goods"/>
            <View
                android:id="@+id/line_right"
                style="@style/me_tab_line_style"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
    </LinearLayout>
    <View
        style="@style/row_style_margin"
        android:visibility="visible"/>
    <FrameLayout
        android:id="@+id/fragment_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabs"
        android:clickable="false">
    </FrameLayout>




</LinearLayout>