<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_247_247_247">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/setting_txt_style"
                android:visibility="visible"
                android:text="@string/txt_account_information"/>
            <TextView
                style="@style/setting_txt_style"
                android:visibility="visible"
                android:text="@string/txt_account_safety"/>

            <RelativeLayout
                android:id="@+id/rel_me_phonenum"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_mine_feedback"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_phononum"/>
                <ImageView
                    android:id="@+id/img_me_phonenum"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
                <TextView
                    android:id="@+id/txt_phonenum"
                    style="@style/me_setting_TextViewStyle_more"
                    android:text="1223243434"
                    android:layout_alignRight="@+id/img_me_phonenum"/>
            </RelativeLayout>
            <View
                style="@style/row_style_margin"
                android:visibility="visible"/>
            <RelativeLayout
                android:id="@+id/rel_me_password"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_mine_feedback"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_password"/>
                <ImageView
                    android:id="@+id/img_me_password"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
                <TextView
                    android:id="@+id/txt_password"
                    style="@style/me_setting_TextViewStyle_more"
                    android:text="未设置"
                    android:layout_alignRight="@+id/img_me_password"/>
            </RelativeLayout>

            <TextView
                style="@style/setting_txt_style"
                android:text="其他登陆方式"/>

            <RelativeLayout
                android:id="@+id/rel_me_wb"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_minewb"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_weibo"/>
                <ImageView
                    android:id="@+id/img_me_wb"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
                <TextView
                    android:id="@+id/txt_wb"
                    style="@style/me_setting_TextViewStyle_more"
                    android:text="未启用"
                    android:layout_alignRight="@+id/img_me_wb"/>
            </RelativeLayout>
            <View
                style="@style/row_style_margin"
                android:visibility="visible"/>
            <RelativeLayout
                android:id="@+id/rel_me_wx"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_minewx"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_weixin"/>
                <ImageView
                    android:id="@+id/img_me_wx"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
                <TextView
                    android:id="@+id/txt_wx"
                    style="@style/me_setting_TextViewStyle_more"
                    android:text="Gary"
                    android:layout_alignRight="@+id/img_me_wx"/>
            </RelativeLayout>
            <View
                style="@style/row_style_margin"
                android:visibility="visible"/>
            <RelativeLayout
                android:id="@+id/rel_me_qq"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_mineqq"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_qq"/>
                <ImageView
                    android:id="@+id/img_me_qq"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
                <TextView
                    android:id="@+id/txt_qq"
                    style="@style/me_setting_TextViewStyle_more"
                    android:text="未启用"
                    android:layout_alignRight="@+id/img_me_qq"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rel_me_feedback"
                style="@style/me_setting_RelativeLayoutStyle"
                android:layout_marginTop="20dp"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_mine_feedback"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_feedback"/>
                <ImageView
                    android:id="@+id/img_me_feedback"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
            </RelativeLayout>
            <View
                style="@style/row_style_margin"
                android:visibility="visible"/>
            <RelativeLayout
                android:id="@+id/rel_me_cleanup"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_mine_cleanup"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_cleanup"/>
                <ImageView
                    android:id="@+id/img_me_cleanup"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
                <TextView
                    android:id="@+id/txt_cleanup"
                    style="@style/me_setting_TextViewStyle_more"
                    android:text="123.m"
                    android:layout_alignRight="@+id/img_me_cleanup"/>
            </RelativeLayout>
            <View
                style="@style/row_style_margin"
                android:visibility="visible"/>
            <RelativeLayout
                android:id="@+id/rel_me_agreement"
                style="@style/me_setting_RelativeLayoutStyle"
                android:visibility="visible">
                <ImageView
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/ic_mine_agreement"/>
                <TextView
                    style="@style/me_setting_TextViewStyle"
                    android:text="@string/txt_agreement"/>
                <ImageView
                    android:id="@+id/img_me_agreement"
                    style="@style/me_setting_ImageViewStyle"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_me_more"/>
            </RelativeLayout>
            <View
                style="@style/row_style_margin"
                android:visibility="visible"/>
            <Button
                android:id="@+id/button_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:textColor="@color/red"
                android:text="@string/txt_exit"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/txt_appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_appname"
                    android:layout_alignLeft="@+id/txt_appname"
                    android:layout_alignParentBottom="true"
                    android:text="V1.1 Copyright2016"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mine_logo"
                    android:layout_marginRight="10dp"

                    android:layout_toLeftOf="@+id/txt_appname"
                    />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>