<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/tab_strategy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_strategy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tabbar_guide"
                />
            <TextView
                android:id="@+id/tv_strategy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="10dp"
                android:textColor="@color/red"
                android:text="@string/main_tab_strategy"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tab_sku"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_sku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tabbar_thing"
                />
            <TextView
                android:id="@+id/tv_sku"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="10dp"
                android:textColor="@color/gray_main_bs"
                android:text="@string/main_tab_goods"/>
        </LinearLayout>
       <!-- <LinearLayout
            android:id="@+id/tab_tea"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_tea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tabbar_tea"/>
            <TextView
                android:id="@+id/tv_tea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="10dp"
                android:textColor="@color/gray_main_bs"
                android:text="@string/main_tab_tea"/>
        </LinearLayout>-->
        <LinearLayout
            android:id="@+id/tab_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_tabbar_mine"/>
            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="10dp"
                android:textColor="@color/gray_main_bs"
                android:text="@string/main_tab_me"/>
        </LinearLayout>
</LinearLayout>
